# ogdf-python-widget

./: README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  test.yml
docs/examples/: ClusterGraph.ipynb  GraphEditorDemo.ipynb  LayoutsDemo.ipynb  Push-Relabel.ipynb  SPQR-Trees.ipynb  VisualizationTest.ipynb  Widget Test.ipynb
js/: package.json
js/lib/: graph-element-constructer.js  ogdf-python-widget-view.js
ogdf_python_widget/: __init__.py  pythonize.py  widget.py
test/: servers.py  test_rendering.py
